--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,79 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* video item in youtube page to set height because elements is take position absolute */
+/* When add classes is already added but with new values the new values is ignored and still with old values => youtube => grid-item (when openCad is true)  */
+/* ^^ */ /* To solve this poblem I'm add new values in global css files with !important to apply   */
+.video {
+  height: 384px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.left-open {
+  left: 0 !important;
+  transform: translateX(0) !important;
 }
 
-* {
-  box-sizing: border-box;
+.right-open {
+  right: 0 !important;
+  transform: translateX(0) !important;
+}
+
+.test-grid {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 1);
+  z-index: 99;
+}
+
+.pesudo-test {
+  position: relative;
+}
+
+.pesudo-test::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 50%;
+  height: 200px;
+  background-color: red;
+  display: inline-block;
+  margin-bottom: 300px;
+}
+
+/* Header */
+.active-link::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -2px;
+  height: 2px;
+  width: 30%;
+  background-color: #fc3358;
+}
+
+/* grid masonry */
+
+.my-masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  width: auto;
+}
+.my-masonry-grid_column {
+  padding-left: 30px; /* gutter size */
+  background-clip: padding-box;
+}
+.my-masonry-grid_column:first-child {
+  padding-left: 0;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div {
+  /* change div to reference your elements you put in <Masonry> */
+  margin-bottom: 30px;
 }
