--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 1);
-  z-index: 99;
+  /* z-index: 99; */
 }
 
 .pesudo-test {
